--- a/templates/song/index.html.twig
+++ b/templates/song/index.html.twig
@@ -11,10 +11,8 @@
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/Users/sebas/Documents/WebFolder/Symfofy/src/Controller/SongController.php</code></li>
-        <li>Your template at <code>C:/Users/sebas/Documents/WebFolder/Symfofy/templates/song/index.html.twig</code></li>
-    </ul>
+    {% for track in tracks %}
+    <p>{{ track['name'] }}</p>
+    {% endfor %}
 </div>
 {% endblock %}
