--- a/templates/song/index.html.twig
+++ b/templates/song/index.html.twig
@@ -15,4 +15,20 @@
     <p>{{ track['name'] }}</p>
     {% endfor %}
 </div>
+
+<div>
+    {{ form_start(form) }}
+
+    <div class="my-custom-class-for-errors">
+        {{ form_errors(form) }}
+    </div>
+
+    <div class="row">
+        <div class="col">
+            {{ form_row(form.name) }}
+        </div>
+    </div>
+    {{ form_end(form) }}
+</div>
+
 {% endblock %}
