--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,42 @@
-body {
-    background-color: skyblue;
+*{margin: 0;padding: 0; box-sizing: border-box;}
+ul{list-style-type: none}
+a{text-decoration: none;color: white;}
+
+h1{
+    padding-bottom: 10px;
+}
+body{
+    background-color: #414c50;
+}
+nav{
+    width: 100%;
+    padding: 16px;
+    background-color: #262829;
+}
+
+nav ul{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+main{
+    padding: 16px;
+    height: 100%;
+    width: 100%;
+}
+
+.example-wrapper { margin: 2em auto; width: 80%; font: 18px/1.5 sans-serif; }
+
+.item{
+
+}
+
+.grid{
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 200px));
+    grid-template-rows:300px;
+    gap: 30px;
+    width: 80%;
 }
